# pedalctl

./: CMakeLists.txt  LICENSE  README.md
libs/: args.hxx
resources/: 70-footpedal.rules
src/: command_list.cpp  command_set.cpp  command_set.hpp  command_set_game.cpp  command_set_keyboard.cpp  command_set_media.cpp  command_set_mouse.cpp  command_set_text.cpp  command_show.cpp  commands.hpp  main.cpp
src/configuration/: base.hpp  dumper.cpp  dumper.hpp  gamepad.hpp  keyboard.hpp  keys.cpp  keys.hpp  media.hpp  mouse.hpp  text.hpp
src/devices/: ikkegol_capabilities.cpp  ikkegol_capabilities.hpp  ikkegol_pedal.cpp  ikkegol_pedal.hpp  ikkegol_protocol.cpp  ikkegol_protocol.hpp
src/utils/: command_line.cpp  command_line.hpp  errors.cpp  errors.hpp  string_utils.cpp  string_utils.hpp  usb_interface_lock.cpp  usb_interface_lock.hpp  usb_scancodes.cpp  usb_scancodes.hpp
